gcc/testsuite/gcc.target/powerpc/dfp/dtstsfi-21.c
/* { dg-do compile { target { powerpc*-*-* } } } */
/* { dg-require-effective-target powerpc_p9vector_ok } */
/* { dg-skip-if "" { powerpc*-*-aix* } } */
/* { dg-options "-mdejagnu-cpu=power8" } */

#include <altivec.h>

int doTestBCDSignificance (_Decimal64 *p)
{
  _Decimal64 source = *p;

  return __builtin_dfp_dtstsfi_gt (5, source);	/* { dg-error "builtin function '__builtin_dtstsfi_gt_dd' requires" } */
}

